hphp/hack/test/typecheck/array/safe_vector_array/gena_correctly_types_darray_argument.php.exp
File "gena_correctly_types_darray_argument.php", line 8, characters 10-56:
Invalid return type (Typing[4110])
File "gena_correctly_types_darray_argument.php", line 3, characters 46-49:
This is a nullable type
File "gena_correctly_types_darray_argument.php", line 7, characters 69-71:
It is incompatible with an int
